--- a/front/src/app/home/home.component.html
+++ b/front/src/app/home/home.component.html
@@ -2,7 +2,7 @@
 <head>
 <style>
 body {
- background-image: url('../../assets/fondo.jpg');
+ background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/e/ef/Restaurant_N%C3%A4sinneula.jpg/640px-Restaurant_N%C3%A4sinneula.jpg');
  background-repeat: no-repeat;
  background-size: cover;
  background-attachment: fixed;
