--- a/front/src/app/list-client/list-client.component.html
+++ b/front/src/app/list-client/list-client.component.html
@@ -5,7 +5,7 @@
             <ng-template pTemplate="body" let-person let-i="index">
                 <tr class="align-centre">
     <!--person agarra cada array que viene en emails, la posición 1 del array son el email y la contraseña 
-    del usuario. Le dijiste que agarre el email-->
+    del usuario. Le decimos que agarre el email-->
                     <td >{{person[1]?.email}}</td>
                 </tr>
             </ng-template>
