--- a/front/src/app/list-products/list-products.component.html
+++ b/front/src/app/list-products/list-products.component.html
@@ -1,8 +1,9 @@
 <div class="grid p-4> div-principal">
   <label>Funcionalidad bajo construcción</label>
+
   <p-card header="Nuestro menú" class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6 p-2">
     
-    <p-table [value]="plats">
+    <p-table [value]="dish">
       <ng-template pTemplate="header">
         <tr>
               <th>Nombre</th>
@@ -12,10 +13,10 @@
           </ng-template>
           <ng-template pTemplate="body" let-plat>
             <tr>
-              <td>{{ plat.nom }}</td>
-              <td>{{ plat.prix }}</td>
+              <td>{{ dish.nombre }}</td>
+              <td>{{ dish.precio }}</td>
               <td>
-                <img [src]="plat.image" alt="{{ plat.nom }}">
+                <img [src]="dish.img" alt="{{ dish.img }}">
               </td>
             </tr>
           </ng-template>
