Se muestran los platillos

--- a/front/src/app/client-suggests/client-suggests.component.html
+++ b/front/src/app/client-suggests/client-suggests.component.html
@@ -1,7 +1,5 @@
-<div class="grid p-4> div-principal">
+<div class="grid p-4 div-principal">
   <p-card class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6">
-
-  <label>Funcionalidad bajo construcción</label>
 
     <div class="field grid mb-3">
       <div class="col">
@@ -16,7 +14,7 @@
       <div class="col">
         <span class="p-float-label" id="span2">
           <input class="w-full" type="text" id="precio aproximado" pInputText [(ngModel)]="dish.precio"> 
-          <label for="precio">Precio</label>
+          <label for="precio">Precio aproximado</label>
         </span>
       </div>
     </div>
@@ -33,6 +31,6 @@
     <div class="field" class="form-group">
       <button pButton type="button" (click)="createDish(dish)">Sugerir</button>
     </div>
-    
+
   </p-card>
 </div>
