--- a/front/src/app/sidebar/sidebar.component.scss
+++ b/front/src/app/sidebar/sidebar.component.scss
@@ -8,6 +8,10 @@ label{
     margin-top: 1rem;
 }
 
+p-sidebar{
+    margin-bottom: 2rem;
+}
+
 div{
     margin-top: 2rem;
     display: flex;
@@ -16,3 +20,5 @@ div{
 .button-acetar{
     margin-right:1rem;
 }
+
+
