--- a/front/src/app/update-client/update-client.component.html
+++ b/front/src/app/update-client/update-client.component.html
@@ -1,4 +1,4 @@
-<div>
+<div class="grid p-4 div-principal">
     <p-card class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6" header="Actualice su información" id="card-main">
       
       <div class="field grid mb-3">
