--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,7 +1,7 @@
 .fondo{
-    width:100wh;
+    width:100%;
     height:100vh;
-    background-image: url(brick.jpg);
+    background-image: url(../assets/fondo.jpg);
     background-position: center;
     background-size: cover;
     background-repeat: no-repeat;
