--- a/front/src/app/form-user/form-user.component.html
+++ b/front/src/app/form-user/form-user.component.html
@@ -1,4 +1,4 @@
-<div class="grid p-4> div-principal">
+<div class="grid p-4 div-principal">
   <p-card class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6" header="Acceda">
 
     <div class="field grid mb-3">
@@ -21,27 +21,40 @@
 
     <div class="field grid">
         <div class="col">
-          <button pButton type="button" for="card-main" class="w-full botones" (click)="loginUser(user)">Acceder</button>
+          <button pButton type="button" 
+                  for="card-main" 
+                  class="w-full botones" 
+                  (click)="loginUser(user)">Acceder
+          </button>
         </div>
     </div>
 
-      <div class="field" class="form-group">
-        <a for="card-main" (click)="show()">Registrarse</a>
-      </div>
+    <div class="field" class="form-group">
+      <a class="hover:text-yellow-600" for="card-main" (click)="show()">Registrarse</a>
+    </div>
   </p-card>
 </div>
 
 <!--menú para crear usuario-->
-<p-dialog header="Regístrese" [(visible)]="showModal" [modal]="true" [style]="{width: '300px'}">
+<p-dialog header="Regístrese" [(visible)]="showModal" [modal]="true">
   <form>
     <div>
-      <label for="username">Email:</label>
-        <input type="text" id="username" name="username" [(ngModel)]="user.email" pInputText>
+        <input type="text" 
+          id="username" 
+          name="username" 
+          [(ngModel)]="user.email" 
+          placeholder="E-mail"
+          class="mb-3"
+        pInputText>
     </div>
 
     <div>
-      <label for="password">Contraseña:</label>
-      <input type="password" id="password" name="password" [(ngModel)]="user.password" pInputText>
+      <input type="password" 
+        id="password" 
+        name="password" 
+        [(ngModel)]="user.password" 
+        placeholder="Contraseña"
+      pInputText>
     </div>
 
     <button type="button" 
@@ -55,6 +68,7 @@
       class="boton-registrar" 
       (click)="showModal = false">
     </button>
+
   </form>
 </p-dialog>
 
