--- a/front/src/app/list-products/list-products.component.css
+++ b/front/src/app/list-products/list-products.component.css
@@ -10,4 +10,8 @@ th {
 img {
   max-width: 100px;
   max-height: 100px;
+}
+
+div-content {
+  justify-content: center;
 }/*# sourceMappingURL=list-products.component.css.map */
