about us empezado

--- a/front/src/app/app.component.html
+++ b/front/src/app/app.component.html
@@ -1,6 +1,6 @@
 <html>
     <body>
-        <div class="fondo">
+        <div class="fondo min-h-screen min-w-full">
             <app-sidebar></app-sidebar>
             <router-outlet></router-outlet>
         </div>
