--- a/front/src/app/client-suggests/client-suggests.component.html
+++ b/front/src/app/client-suggests/client-suggests.component.html
@@ -1,5 +1,5 @@
 <div class="grid p-4 div-principal">
-  <p-card class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6">
+  <p-card class="col-12 sm:col-12 md:col-10 lg:col-8 xl:col-6" header="Su sugerencia">
 
     <div class="field grid mb-3">
       <div class="col">
