--- a/front/src/app/sidebar/sidebar.component.html
+++ b/front/src/app/sidebar/sidebar.component.html
@@ -49,8 +49,7 @@
         pButton label="Aceptar" 
         class="boton-registrar-aceptar"
         (click)="deleteUser()"
-        class="button-aceptar"
-        severity="danger"
+        class="p-button-danger"
         style="margin-right: 1rem;">
       </button>
 
