--- a/front/src/app/app.component.scss
+++ b/front/src/app/app.component.scss
@@ -1,6 +1,4 @@
 .fondo{
-    width:100%;
-    height:100vh;
     background-image: url(../assets/fondo.jpg);
     background-position: center;
     background-size: cover;
@@ -8,3 +6,10 @@
     background-attachment: fixed;
     background-origin: border-box;
 }
+html, body {
+    margin:  0;
+    padding:  0;
+}
+  
+  
+  
