--- a/front/src/app/form-user/form-user.component.scss
+++ b/front/src/app/form-user/form-user.component.scss
@@ -4,6 +4,9 @@
   justify-content: center;
 }
 
+p-card{
+  min-height: 80vh;
+}
 .div-principal{
   justify-content: center; 
   text-align:center;
@@ -21,5 +24,8 @@
 }
 
 .boton-registrar-cancelar{
-  margin-top: 10px
+  margin-top: 10px;
+  justify-content: end;
+  background-color: rgb(146, 11, 11);
+  border-color: rgb(146, 11, 11);
 }
