--- a/front/src/app/about/about.component.html
+++ b/front/src/app/about/about.component.html
@@ -1,22 +1,78 @@
-<div class="div p-8">
-    <div class="p-5 grid">
-        <div class="p-card col-6">
+<div class="div p-4">
+
+    <label class="title">En contrucción</label>
+
+    <div class="grid p-5 justify-content-center">
+        <div class="card col-6">
             <div class="grid texto">
                 <div class="col-12 text-center title">
-                        En construcción
+                    Nuestra historia
                 </div>
+
                 <div class="m-0 text-justify col-6">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-                    quas!
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae 
+                    numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, 
+                    cupiditate neque quas!
                 </div>
-                <div class="m-0 text-justify col-6 paragraph">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat libero asperiores earum nam nobis, culpa ratione quam perferendis esse, cupiditate neque
-                    quas!
+
+                <div class="m-0 text-justify col-6">
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                    Inventore sed consequuntur error repudiandae numquam deserunt quisquam repellat 
+                    libero asperiores earum nam nobis, culpa ratione quam perferendis esse, 
+                    cupiditate neque quas!
                 </div>
             </div>
         </div>
-        <div class="col-6 p-d-flex p-justify-center p-align-center">
+
+        <div class="col-4 p-d-flex ml-12">
             <img class="chef" src="../../assets/chef.jpg">
+        </div>
+        
+        <div class="card col-10 my-2">
+            <div class="grid texto">
+
+                <div class="col-12 text-center title">
+                    Nuestra experiencia
+                </div>
+
+                <div class="grid px-2 mx-auto sm:col-12 md:col-12 lg:col-12">
+                    <p-panel header="CDMX" class="text-justify xl:col-6">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                            ut aliquip ex ea commodo
+                            consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate 
+                            velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                            deserunt mollit anim id est laborum.
+                        </p>
+                    </p-panel>
+
+                    <p-panel header="Monterrey" class="text-justify xl:col-6">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                            sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. 
+                            Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi 
+                            ut aliquip ex ea commodo
+                            consequat. 
+                            Duis aute irure dolor in reprehenderit in voluptate 
+                            velit esse cillum dolore eu fugiat nulla pariatur. 
+                            Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia 
+                            deserunt mollit anim id est laborum.
+                        </p>
+                    </p-panel>
+
+                    <p-card class="xl:col-6 lg:col-12" header="Tienda CDMX">
+                        <img class="tienda" src="../../assets/cdmx.jpg">
+                    </p-card>
+
+                    <p-card class="xl:col-6 lg:col-12" header="Tienda MTY">
+                        <img class="tienda" src="../../assets/mty.jpg">
+                    </p-card>                    
+                </div>
+            </div>
         </div>
     </div>
 </div>
