--- a/front/src/app/about/about.component.scss
+++ b/front/src/app/about/about.component.scss
@@ -1,20 +1,32 @@
-.p-card{
+.card{
     background: rgba(38, 61, 61, 0.8);
 }
 .title{
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-weight: 500;
     font-size: xx-large;
+    text-align: center;
 }
 .texto{
     font-weight: 200;
-    color:rgb(255, 255, 255)
+    color:rgb(255, 255, 255);
+    height:auto;
 }
 .chef{
     height:270px;
     width:150px;
 }
+.p-card-header {
+    background-color: red; /* Replace #yourColor with the actual color code */
+}
+.tienda{
+    width:  100%;
+    height:  100%;
+    object-fit: cover;
+}
 
-.paragraph{
-    height:auto;    
+.p-card {
+    position: relative;
+    width:  100%;
+    padding-top:  100%; /* This makes the height equal to the width */
 }
