--- a/front/src/app/app.component.css
+++ b/front/src/app/app.component.css
@@ -1,10 +1,13 @@
 .fondo {
-  width: 100%;
-  height: 100vh;
   background-image: url(../assets/fondo.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
   background-origin: border-box;
+}
+
+html, body {
+  margin: 0;
+  padding: 0;
 }/*# sourceMappingURL=app.component.css.map */
